infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuest-web
  namespace: kuest
spec:
  selector:
    app: kuest-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
